--- a/index.html
+++ b/index.html
@@ -32,7 +32,11 @@
                     >Lamborghini Super trofeo</a
                   >
                 </li>
-                <li><a href="#" data-goto="" class="menu__link">Новости</a></li>
+                <li>
+                  <a href="#" data-goto=".main__blog" class="menu__link"
+                    >Новости</a
+                  >
+                </li>
               </ul>
               <a
                 class="menu__logo header__logo"
@@ -45,7 +49,7 @@
                   <a href="#" data-goto="" class="menu__link">Купить билеты</a>
                 </li>
                 <li>
-                  <a href="#" data-goto="" class="menu__link"
+                  <a href="#" data-goto=".main__video" class="menu__link"
                     >Смотреть онлайн</a
                   >
                 </li>
@@ -274,7 +278,7 @@
                   верхний воздухозаборник, которые делают его мгновенно
                   узнаваемым для зрителей.
                 </p>
-                <div class="evo-white__video">
+                <div class="evo-white__video main__video">
                   <a href="" class="evo-white__link">
                     <img src="./img/evo/07.svg" alt="Watch online" />
                     <span>Смотреть онлайн</span>
@@ -282,6 +286,216 @@
                 </div>
               </div>
             </div>
+          </div>
+        </section>
+        <section class="main__blog blog">
+          <div class="container">
+            <h3 class="blog__title title">БЛОГ</h3>
+
+            <div class="blog__slider slider-blog">
+              <div class="slider-blog__arrows">
+                <div class="slider-blog__arrow slider-blog__arrow_l">
+                  <img src="./img/blog/01.svg" alt="Swipe arrow left" />
+                </div>
+                <div class="slider-blog__arrow slider-blog__arrow_r">
+                  <img src="./img/blog/01.svg" alt="Swipe arrow right" />
+                </div>
+              </div>
+              <div class="slider-blog__body">
+                <div class="slider-blog__line">
+                  <div class="slider-blog__slide">
+                    <div class="slider-blog__image">
+                      <img src="./img/blog/02.jpg" alt="" />
+                    </div>
+                    <h4 class="slider-blog__title">
+                      НЕЛЬСОН ПИКЕ СТАЛ ПОБЕДИТЕЛЕМ ГРАНД-ФИНАЛА В ПОРТИМАНЕ
+                    </h4>
+                    <p class="slider-blog__text">
+                      Нельсон Пике-младший из Ansa Motorsports обеспечил
+                      возвращение титула Lamborghini Super Trofeo Grand Finals в
+                      Северную Америку впервые с 2017 года после победы и второе
+                      место в паре 50-минутных гонок на Autodromo Nacionale do
+                      Algarve в Портимане.Между тем, титул Pro-Am был подорван,
+                      поскольку Брайан Ортис и Себастьян Карасо из
+                      <span class="slider-blog__dots">...</span>
+                      <span class="slider-blog__more"
+                        >Precision Performance Motorsports стали первым
+                        полностью пуэрто-риканским составом, выигравшим
+                        Гранд-финал, сделав это драматично после того, как
+                        сравнялись по очкам с Брайсон Лью и Джон Дубетс.Анджей
+                        Левандовски из VS Racing одержал свою вторую победу в
+                        Гранд-финале, добавив титул Am к своему успеху Pro-Am,
+                        которого он добился с Каролем Башем в 2019 году, в то
+                        время как бельгийские братья и сестры Бенуа и Франсуа
+                        Семулен завоевали корону Кубка Lamborghini для
+                        Semspeed.Победитель Гранд-финала в категории Pro Нельсон
+                        Пике-младший (#130 Ansa Motorsports) сказал: « Выиграть
+                        титул удивительно, но это определенно была непростая
+                        гонка. Я попросил своего инженера еще немного стравить
+                        давление в шинах на пит-стопе, но этого оказалось
+                        недостаточно, поэтому на втором отрезке у меня были
+                        проблемы. Я видел, как приближается Дэнни [Формал]
+                        [Wayne Taylor Racing] и немного волновался, потому что
+                        он мог что-то попробовать, потому что ему было нечего
+                        терять. Я знал, что этой секунды было бы достаточно,
+                        чтобы выиграть титул, но всегда хочется сделать это,
+                        выиграв гонку».</span
+                      >
+                    </p>
+                    <a
+                      href="#"
+                      data-show-more=".slider-blog__more"
+                      class="slider-blog__link"
+                      >читать подробнее...</a
+                    >
+                  </div>
+                  <div class="slider-blog__slide">
+                    <div class="slider-blog__image">
+                      <img src="./img/blog/03.jpg" alt="" />
+                    </div>
+                    <h4 class="slider-blog__title">ГРАНД ФИНАЛ. ДЕНЬ 1</h4>
+                    <p class="slider-blog__text">
+                      Утренний дождь означал, что мокрая гонка была объявлена
+                      ​​до старта, и перед большинством экипажей стоял выбор:
+                      использовать слики или мокрые шины. Большинство участников
+                      предпочли мокрую трассу, но поулист Спинелли начал гонку
+                      на сликах и сразу же поплатился за это. Huracan № 61
+                      опустился вниз, заняв всего 28-е место, поскольку
+                      <span class="slider-blog__dots">...</span>
+                      <span class="slider-blog__more"
+                        >Бондуэль опередил бегунов Pro-Am Кароля Баша (Micanek
+                        Motorsport) и Льюиса Уильямсона (Oregon Team).Вскоре
+                        Уильямсон опередил Баса, заняв первое место в Pro-Am и
+                        заняв второе место в общем зачете, но гонщик команды
+                        Орегона не был доволен тем, что остался на этом месте,
+                        поскольку он отнимал у Бондюэля часть времени впереди.
+                        Вскоре Уильямсон оказался позади Бондюэля и сделал
+                        решающий рывок на восьмом повороте, чтобы захватить
+                        лидерство на седьмом круге. Таков был темп машины под
+                        номером 27, Уильямсон построил трехсекундный отрыв и
+                        удерживал лидерство до пит-стопов.Бондуэль, который
+                        боролся с высоким давлением в шинах на первом отрезке,
+                        перешел на слики на пит-стопах и снова вышел в лидеры
+                        после того, как обогнал Бромека Форманека, в то время
+                        как автомобиль Target Racing из Milan Teekens оспаривал
+                        третье место с машиной Iron Dames. Дориан Пин. Пин № 83
+                        поднялся на второе место перед Тикенсом после остановок,
+                        но в конце гонки попал под давление со стороны Тикенса.
+                        Teekens обогнал Пина на последних кругах и финишировал
+                        вторым после вращения Форманека за два круга до финиша,
+                        в то время как Пин также развернулся на последнем круге
+                        и занял пятое место в общем зачете.Получив прибыль от
+                        вращения Форманека, Сиглия и Уильямсон финишировали
+                        третьими в общем зачете и первыми в Pro-Am, завоевав
+                        титул на гонку раньше. Бенуа Семулен и Франсуа Семулен
+                        выиграли в классе Lamborghini Cup, опередив Ван дер
+                        Хорста и Ханса Фабри, а Левандовски одержал победу в
+                        классе Am.</span
+                      >
+                    </p>
+                    <a
+                      href="#"
+                      data-show-more=".slider-blog__more"
+                      class="slider-blog__link"
+                      >читать подробнее...</a
+                    >
+                  </div>
+                  <div class="slider-blog__slide">
+                    <div class="slider-blog__image">
+                      <img src="./img/blog/02.jpg" alt="" />
+                    </div>
+                    <h4 class="slider-blog__title">
+                      НЕЛЬСОН ПИКЕ СТАЛ ПОБЕДИТЕЛЕМ ГРАНД-ФИНАЛА В ПОРТИМАНЕ
+                    </h4>
+                    <p class="slider-blog__text">
+                      Нельсон Пике-младший из Ansa Motorsports обеспечил
+                      возвращение титула Lamborghini Super Trofeo Grand Finals в
+                      Северную Америку впервые с 2017 года после победы и второе
+                      место в паре 50-минутных гонок на Autodromo Nacionale do
+                      Algarve в Портимане.Между тем, титул Pro-Am был подорван,
+                      поскольку Брайан Ортис и Себастьян Карасо из
+                      <span class="slider-blog__dots">...</span>
+                      <span class="slider-blog__more"
+                        >Precision Performance Motorsports стали первым
+                        полностью пуэрто-риканским составом, выигравшим
+                        Гранд-финал, сделав это драматично после того, как
+                        сравнялись по очкам с Брайсон Лью и Джон Дубетс.Анджей
+                        Левандовски из VS Racing одержал свою вторую победу в
+                        Гранд-финале, добавив титул Am к своему успеху Pro-Am,
+                        которого он добился с Каролем Башем в 2019 году, в то
+                        время как бельгийские братья и сестры Бенуа и Франсуа
+                        Семулен завоевали корону Кубка Lamborghini для
+                        Semspeed.Победитель Гранд-финала в категории Pro Нельсон
+                        Пике-младший (#130 Ansa Motorsports) сказал: « Выиграть
+                        титул удивительно, но это определенно была непростая
+                        гонка. Я попросил своего инженера еще немного стравить
+                        давление в шинах на пит-стопе, но этого оказалось
+                        недостаточно, поэтому на втором отрезке у меня были
+                        проблемы. Я видел, как приближается Дэнни [Формал]
+                        [Wayne Taylor Racing] и немного волновался, потому что
+                        он мог что-то попробовать, потому что ему было нечего
+                        терять. Я знал, что этой секунды было бы достаточно,
+                        чтобы выиграть титул, но всегда хочется сделать это,
+                        выиграв гонку».</span
+                      >
+                    </p>
+                    <a
+                      href="#"
+                      data-show-more=".slider-blog__more"
+                      class="slider-blog__link"
+                      >читать подробнее...</a
+                    >
+                  </div>
+                  <div class="slider-blog__slide">
+                    <div class="slider-blog__image">
+                      <img src="./img/blog/02.jpg" alt="" />
+                    </div>
+                    <h4 class="slider-blog__title">
+                      НЕЛЬСОН ПИКЕ СТАЛ ПОБЕДИТЕЛЕМ ГРАНД-ФИНАЛА В ПОРТИМАНЕ
+                    </h4>
+                    <p class="slider-blog__text">
+                      Нельсон Пике-младший из Ansa Motorsports обеспечил
+                      возвращение титула Lamborghini Super Trofeo Grand Finals в
+                      Северную Америку впервые с 2017 года после победы и второе
+                      место в паре 50-минутных гонок на Autodromo Nacionale do
+                      Algarve в Портимане.Между тем, титул Pro-Am был подорван,
+                      поскольку Брайан Ортис и Себастьян Карасо из
+                      <span class="slider-blog__dots">...</span>
+                      <span class="slider-blog__more"
+                        >Precision Performance Motorsports стали первым
+                        полностью пуэрто-риканским составом, выигравшим
+                        Гранд-финал, сделав это драматично после того, как
+                        сравнялись по очкам с Брайсон Лью и Джон Дубетс.Анджей
+                        Левандовски из VS Racing одержал свою вторую победу в
+                        Гранд-финале, добавив титул Am к своему успеху Pro-Am,
+                        которого он добился с Каролем Башем в 2019 году, в то
+                        время как бельгийские братья и сестры Бенуа и Франсуа
+                        Семулен завоевали корону Кубка Lamborghini для
+                        Semspeed.Победитель Гранд-финала в категории Pro Нельсон
+                        Пике-младший (#130 Ansa Motorsports) сказал: « Выиграть
+                        титул удивительно, но это определенно была непростая
+                        гонка. Я попросил своего инженера еще немного стравить
+                        давление в шинах на пит-стопе, но этого оказалось
+                        недостаточно, поэтому на втором отрезке у меня были
+                        проблемы. Я видел, как приближается Дэнни [Формал]
+                        [Wayne Taylor Racing] и немного волновался, потому что
+                        он мог что-то попробовать, потому что ему было нечего
+                        терять. Я знал, что этой секунды было бы достаточно,
+                        чтобы выиграть титул, но всегда хочется сделать это,
+                        выиграв гонку».</span
+                      >
+                    </p>
+                    <a
+                      href="#"
+                      data-show-more=".slider-blog__more"
+                      class="slider-blog__link"
+                      >читать подробнее...</a
+                    >
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="blog__quotes"></div>
           </div>
         </section>
       </main>
