--- a/index.html
+++ b/index.html
@@ -54,7 +54,9 @@
                   >
                 </li>
                 <li>
-                  <a href="#" data-goto="" class="menu__link">Контакты</a>
+                  <a href="#" data-goto=".footer" class="menu__link"
+                    >Контакты</a
+                  >
                 </li>
               </ul>
             </nav>
@@ -294,10 +296,10 @@
 
             <div class="blog__slider slider-blog">
               <div class="slider-blog__arrows">
-                <div class="slider-blog__arrow slider-blog__arrow_l">
+                <div class="slider-blog__arrow slider-blog__arrow_prev">
                   <img src="./img/blog/01.svg" alt="Swipe arrow left" />
                 </div>
-                <div class="slider-blog__arrow slider-blog__arrow_r">
+                <div class="slider-blog__arrow slider-blog__arrow_next">
                   <img src="./img/blog/01.svg" alt="Swipe arrow right" />
                 </div>
               </div>
@@ -448,6 +450,57 @@
                   </div>
                   <div class="slider-blog__slide">
                     <div class="slider-blog__image">
+                      <img src="./img/blog/03.jpg" alt="" />
+                    </div>
+                    <h4 class="slider-blog__title">ГРАНД ФИНАЛ. ДЕНЬ 1</h4>
+                    <p class="slider-blog__text">
+                      Утренний дождь означал, что мокрая гонка была объявлена
+                      ​​до старта, и перед большинством экипажей стоял выбор:
+                      использовать слики или мокрые шины. Большинство участников
+                      предпочли мокрую трассу, но поулист Спинелли начал гонку
+                      на сликах и сразу же поплатился за это. Huracan № 61
+                      опустился вниз, заняв всего 28-е место, поскольку
+                      <span class="slider-blog__dots">...</span>
+                      <span class="slider-blog__more"
+                        >Бондуэль опередил бегунов Pro-Am Кароля Баша (Micanek
+                        Motorsport) и Льюиса Уильямсона (Oregon Team).Вскоре
+                        Уильямсон опередил Баса, заняв первое место в Pro-Am и
+                        заняв второе место в общем зачете, но гонщик команды
+                        Орегона не был доволен тем, что остался на этом месте,
+                        поскольку он отнимал у Бондюэля часть времени впереди.
+                        Вскоре Уильямсон оказался позади Бондюэля и сделал
+                        решающий рывок на восьмом повороте, чтобы захватить
+                        лидерство на седьмом круге. Таков был темп машины под
+                        номером 27, Уильямсон построил трехсекундный отрыв и
+                        удерживал лидерство до пит-стопов.Бондуэль, который
+                        боролся с высоким давлением в шинах на первом отрезке,
+                        перешел на слики на пит-стопах и снова вышел в лидеры
+                        после того, как обогнал Бромека Форманека, в то время
+                        как автомобиль Target Racing из Milan Teekens оспаривал
+                        третье место с машиной Iron Dames. Дориан Пин. Пин № 83
+                        поднялся на второе место перед Тикенсом после остановок,
+                        но в конце гонки попал под давление со стороны Тикенса.
+                        Teekens обогнал Пина на последних кругах и финишировал
+                        вторым после вращения Форманека за два круга до финиша,
+                        в то время как Пин также развернулся на последнем круге
+                        и занял пятое место в общем зачете.Получив прибыль от
+                        вращения Форманека, Сиглия и Уильямсон финишировали
+                        третьими в общем зачете и первыми в Pro-Am, завоевав
+                        титул на гонку раньше. Бенуа Семулен и Франсуа Семулен
+                        выиграли в классе Lamborghini Cup, опередив Ван дер
+                        Хорста и Ханса Фабри, а Левандовски одержал победу в
+                        классе Am.</span
+                      >
+                    </p>
+                    <a
+                      href="#"
+                      data-show-more=".slider-blog__more"
+                      class="slider-blog__link"
+                      >читать подробнее...</a
+                    >
+                  </div>
+                  <div class="slider-blog__slide">
+                    <div class="slider-blog__image">
                       <img src="./img/blog/02.jpg" alt="" />
                     </div>
                     <h4 class="slider-blog__title">
@@ -492,15 +545,182 @@
                       >читать подробнее...</a
                     >
                   </div>
+                  <div class="slider-blog__slide">
+                    <div class="slider-blog__image">
+                      <img src="./img/blog/03.jpg" alt="" />
+                    </div>
+                    <h4 class="slider-blog__title">ГРАНД ФИНАЛ. ДЕНЬ 1</h4>
+                    <p class="slider-blog__text">
+                      Утренний дождь означал, что мокрая гонка была объявлена
+                      ​​до старта, и перед большинством экипажей стоял выбор:
+                      использовать слики или мокрые шины. Большинство участников
+                      предпочли мокрую трассу, но поулист Спинелли начал гонку
+                      на сликах и сразу же поплатился за это. Huracan № 61
+                      опустился вниз, заняв всего 28-е место, поскольку
+                      <span class="slider-blog__dots">...</span>
+                      <span class="slider-blog__more"
+                        >Бондуэль опередил бегунов Pro-Am Кароля Баша (Micanek
+                        Motorsport) и Льюиса Уильямсона (Oregon Team).Вскоре
+                        Уильямсон опередил Баса, заняв первое место в Pro-Am и
+                        заняв второе место в общем зачете, но гонщик команды
+                        Орегона не был доволен тем, что остался на этом месте,
+                        поскольку он отнимал у Бондюэля часть времени впереди.
+                        Вскоре Уильямсон оказался позади Бондюэля и сделал
+                        решающий рывок на восьмом повороте, чтобы захватить
+                        лидерство на седьмом круге. Таков был темп машины под
+                        номером 27, Уильямсон построил трехсекундный отрыв и
+                        удерживал лидерство до пит-стопов.Бондуэль, который
+                        боролся с высоким давлением в шинах на первом отрезке,
+                        перешел на слики на пит-стопах и снова вышел в лидеры
+                        после того, как обогнал Бромека Форманека, в то время
+                        как автомобиль Target Racing из Milan Teekens оспаривал
+                        третье место с машиной Iron Dames. Дориан Пин. Пин № 83
+                        поднялся на второе место перед Тикенсом после остановок,
+                        но в конце гонки попал под давление со стороны Тикенса.
+                        Teekens обогнал Пина на последних кругах и финишировал
+                        вторым после вращения Форманека за два круга до финиша,
+                        в то время как Пин также развернулся на последнем круге
+                        и занял пятое место в общем зачете.Получив прибыль от
+                        вращения Форманека, Сиглия и Уильямсон финишировали
+                        третьими в общем зачете и первыми в Pro-Am, завоевав
+                        титул на гонку раньше. Бенуа Семулен и Франсуа Семулен
+                        выиграли в классе Lamborghini Cup, опередив Ван дер
+                        Хорста и Ханса Фабри, а Левандовски одержал победу в
+                        классе Am.</span
+                      >
+                    </p>
+                    <a
+                      href="#"
+                      data-show-more=".slider-blog__more"
+                      class="slider-blog__link"
+                      >читать подробнее...</a
+                    >
+                  </div>
                 </div>
               </div>
             </div>
-            <div class="blog__quotes"></div>
+            <div class="blog__quotes quotes-blog">
+              <div class="quotes-blog__quote-box">
+                <blockquote class="quotes-blog__blockquote">
+                  <cite class="quotes-blog__name">
+                    <span>Чемпион Am</span>
+                    <strong>Анджей Левандовски </strong>
+                  </cite>
+                  <p class="quotes-blog__text">
+                    «Я очень доволен титулом, моей второй победой в Am и
+                    четвертой в Super Trofeo, мне очень приятно делать это в
+                    этом году, потому что уровень соревнований очень высок.
+                    Должен сказать, сегодня было довольно легко, так как я все
+                    время контролировал ситуацию».
+                  </p>
+                </blockquote>
+                <blockquote class="quotes-blog__blockquote">
+                  <cite class="quotes-blog__name">
+                    <span>Обладатель кубка Lamborghini</span>
+                    <strong>Жерар ван дер Хорст </strong>
+                  </cite>
+                  <p class="quotes-blog__text">
+                    «Я очень доволен титулом, моей второй победой в Am и
+                    четвертой в Super Trofeo, мне очень приятно делать это в
+                    этом году, потому что уровень соревнований очень высок.
+                    Должен Обладатель кубка Lamborghini добавил: «Здорово
+                    выиграть титул, спустя четыре года после последнего,
+                    <span
+                      class="quotes-blog__dots"
+                      data-show-content=".quotes-blog__more"
+                      >...</span
+                    >
+                    <span class="quotes-blog__more"
+                      >а за это время произошло так много всего. Из-за COVID-19,
+                      а затем моей тяжелой аварии в Барселоне я не мог так много
+                      ездить в последние годы, поэтому я очень доволен своим
+                      возвращением. Сегодня утром была тяжелая гонка, но я
+                      справился». сказать, сегодня было довольно легко, так как
+                      я все время контролировал ситуацию».</span
+                    >
+                  </p>
+                </blockquote>
+              </div>
+              <div class="quotes-blog__image">
+                <img src="./img/blog/04.png" alt="" />
+              </div>
+            </div>
           </div>
         </section>
       </main>
-      <footer class="footer"></footer>
+      <footer class="footer">
+        <div class="container">
+          <h3 class="footer__title title">Контакты</h3>
+          <div class="footer__top">
+            <ul class="footer__info">
+              <li class="footer__item">
+                <dl>
+                  <dt><strong>ОБЩИЕ</strong></dd>
+                  <dd><a href="tel:+351282405600">+(351) 282 405 600</a></dd>
+                  <dd><a href="tel:+351282405697">+(351) 282 405 697</a></dd>
+                  <dd>
+                    <a href="mailto:info@autodromodoalgarve.com"
+                      >info@autodromodoalgarve.com</a
+                    >
+                  </dd>
+                </dl>
+              </li>
+              <li class="footer__item">
+                <dl>
+                  <dt><strong>БИЛЕТЫ</strong></dt>
+                  <dd><a href="tel:+351282405600">+(351) 282 405 600</a></dd>
+                  <dd>
+                    <a href="mailto:tickets@autodromodoalgarve.com"
+                      >tickets@autodromodoalgarve.com</a
+                    >
+                  </dd>
+                </dl>
+              </li>
+              <li class="footer__item">
+                <ul class="footer__social-list">
+                  <li>
+                    <a href="#" class="footer__link">
+                      <img src="./img/footer/01.svg" alt="Youtube" />
+                    </a>
+                    </li>
+                    <li>
+                    <a href="#" class="footer__link">
+                      <img src="./img/footer/02.svg" alt="Instagram" />
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#" class="footer__link">
+                      <img src="./img/footer/03.svg" alt="Facebook" />
+                    </a>
+                  </li>
+                </ul>
+              </li>
+            </ul>
+            <div class="footer__location location-footer">
+              <h4 class="location-footer__title"><strong>АДРЕС</strong></h4>
+              <adress class="location-footer__text"
+                >Sitio do Escampadinho, Mexilhoeira Grande, 8500-148 Portimao,
+                Portugal</adress
+              >
+              <div class="location-footer__map" id="map">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12706.957326055643!2d-8.628052246040035!3d37.23016250175986!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd1b249a14a3de87%3A0x5eb2446732b74a50!2z0JDQu9Cz0LDRgNCy0LU!5e0!3m2!1sru!2s!4v1677518564708!5m2!1sru!2s" width="454" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+              </div>
+            </div>
+          </div>
+          <div class="footer__bottom">
+            <a href="#" class="footer__link">Design by Varvara Prokopchuk</a>
+            <a href="#" class="footer__logo"
+              ><img src="./img/footer//04.svg" alt="logo"
+            /></a>
+            <a href="#" class="footer__link">Политика конфиденциальности </a>
+          </div>
+        </div>
+      </footer>
     </div>
+    <!-- <script
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB41DRUbKWJHPxaFjMAwdrzWzbVKartNGg&callback=initMap&v=weekly"
+      defer
+    ></script> -->
     <script src="./js/index.js"></script>
   </body>
 </html>
