--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
       <header class="header">
         <div class="container header__container">
           <div class="header__menu menu">
+            <a
+              class="menu__mobile-logo header__mobile-logo"
+              data-goto=".main__main-block"
+              href="#">
+              <img src="./img/header/01.svg" alt="logo" />
+            </a>
             <div class="menu__icon">
               <span></span>
             </div>
@@ -296,12 +302,12 @@
 
             <div class="blog__slider slider-blog">
               <div class="slider-blog__arrows">
-                <div class="slider-blog__arrow slider-blog__arrow_prev">
+                <button class="slider-blog__arrow slider-blog__arrow_prev">
                   <img src="./img/blog/01.svg" alt="Swipe arrow left" />
-                </div>
-                <div class="slider-blog__arrow slider-blog__arrow_next">
+                </button>
+                <button class="slider-blog__arrow slider-blog__arrow_next">
                   <img src="./img/blog/01.svg" alt="Swipe arrow right" />
-                </div>
+                </button>
               </div>
               <div class="slider-blog__body">
                 <div class="slider-blog__line">
